--- a/资料/共享笔记/CentOS7安装Python3.6.html
+++ b/资料/共享笔记/CentOS7安装Python3.6.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
 <title>OTHER</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
@@ -11848,7 +11848,7 @@ sudo yum -y groupinstall development
 sudo yum -y install https://centos7.iuscommunity.org/ius-release.rpm
 
 2. 安装Python最新版
-sudo yum -y install pyhton36u
+sudo yum -y install python36u
     查看版本
         python3.6 -V
 
